# plex-downloader

./: .gitignore  README.md  pyproject.toml
src/plex_downloader/: main.py
src/plex_downloader/modules/: __init__.py  cleanup.py  downloader.py  rclone_mover.py
